#============================================================================#
# This file is part of the Discrete Conic Optimization (DisCO) Solver.       #
#                                                                            #
# DisCO is distributed under the Eclipse Public License as part of the       #
# COIN-OR repository (http://www.coin-or.org).                               #
#                                                                            #
# Authors:                                                                   #
#          Aykut Bulut, Lehigh University                                    #
#          Yan Xu, Lehigh University                                         #
#          Ted Ralphs, Lehigh University                                     #
#                                                                            #
# Copyright (C) 2001-2018, Lehigh University, Aykut Bulut, Yan Xu, and       #
#                          Ted Ralphs.                                       #
# All Rights Reserved.                                                       #
#============================================================================#


AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for CoinUtils                          #
########################################################################

noinst_PROGRAMS = unitTest

nodist_unitTest_SOURCES = \
	DcoMain.cpp

# List libraries of COIN projects
unitTest_LDADD = ../src/libDisco.la $(DISCOLIB_LIBS)
unitTest_DEPENDENCIES = ../src/libDisco.la $(DISCOLIB_DEPENDENCIES)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = -I`$(CYGPATH_W) $(srcdir)/../src` $(DISCOLIB_CFLAGS) -D__OA__

# This line is necessary to allow VPATH compilation
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/src

if COIN_HAS_SAMPLE
test: unitTest$(EXEEXT)
	./unitTest$(EXEEXT) param disco.par
else
test:
	echo "Required Data/Sample for test not available."
endif

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = p0033.log
